--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/index.js",
-    "build": "node src/index.js"
+    "build": "webpack --mode production"
   },
   "keywords": [],
   "author": "",
